# EpiSync

./: LICENSE  README.md  config.yaml  pyproject.toml
episync/: annotation.py  config.py  dna_layer.py  expression_layer.py  isoform_layer.py  loader.py  m6a_layer.py  overlap.py
tests/: test_overlap.py
